--- a/redsheet-portal/src/app/components/dashboard/dashboard.component.html
+++ b/redsheet-portal/src/app/components/dashboard/dashboard.component.html
@@ -2,6 +2,70 @@
 <div class="container-fluid">
   
 <div class="row justify-content-center">
+    
+    <!-- DashBoard -->
+    <div class="col-12 col-lg-12 col-xl-10">
+        <div class="section-box " style="background-color: #f1e9e933;">
+            <div class="section-header">
+                <h2 class="section-title d-inline-block" >DashBoard</h2>
+                <button class="btn btn-info pull-right" (click)="expandDashboard=!expandDashboard"
+                    ><i class="fa" [ngClass]="{'fa-angle-up':expandDashboard,'fa-angle-down':!expandDashboard}"></i></button>
+            </div>
+            <div class="section-body">
+                <div id="demo" class="collapse" [ngClass]="{'show':expandDashboard,'hide':expandDashboard}">
+                    <hr>
+                    <div class="container-fluid">         
+                        <div class="section-body">
+                            <div class="row justify-content-center align-items-center">                        
+                                    <div class="my-1 mx-0 px-0 row col-sm-12 col-md-12 col-lg-5 justify-content-around align-items-center">                                
+                                        <label class="my-1 col-sm-12 col-md-2 col-lg-auto h2">Search</label>
+                                        <input type="text" class="my-1 form-control bg-white rounded col-sm-12 col-md-10 col-lg-8 text-dark h4" placeholder="Text here.." [(ngModel)]="searchValue" (keyup)="SearchEmailTransaction()">    
+                                    </div>
+                                    <div class="my-1 mx-0 px-0 row col-sm-12 col-md-12 col-lg-7 justify-content-around align-items-center">   
+                                        <label class="my-1 col-sm-12 col-md-2 col-lg-auto h2">Filter</label>
+                                        <div class="col-sm-12 col-md-10 col-lg-9 row px-0 justify-content-start">
+                                            <div class="m-0 p-0 col-12 row justify-content-around">
+                                                <select class="my-1 mx-auto form-control form-control-lg rounded col-sm-5 col-md-5 col-lg-5 text-secondary h4" [(ngModel)]="emailCategoryValue" (change)="CategoryEmailTransaction()">
+                                                    <option value=""></option>
+                                                    <option class="h4" *ngFor="let filter of emailCategory" value="{{filter}}">{{filter}}</option>
+                                                </select>   
+                                                <button type="button" class="my-1 mx-auto btn-secondary bg-secondary rounded col-sm-6 col-md-6 col-lg-6 ">
+                                                    <p class="m-0 p-0 text-light h4">Reset Filter</p>
+                                                <!-- <i [class]="sortClass" aria-hidden="true"></i> -->
+                                            </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="section-box">
+                        <div class="section-body">
+                            <rx-template #templateEvent="rxtemplate" [(dataSource)]="projects" pageSize="2"
+                                masterClass="col-12 col-lg-12 col-xl-12">
+                                <ul> <!-- custom-list dashboard-list -->
+                                    <li class="my-1" type="none">
+                                        <rx-table #tableEvent="grid" class="table" [dataSource]="projects">
+                                            <rx-column field="projectId" title="Table / View Name" width="212"></rx-column>
+                                            <rx-column [actionable]="true" title="Is Data Auditable" width="139">
+                                                <ng-template rxCellTemplate let-project="project">
+                                                    <div>
+                                                        
+                                                    </div>
+                                                </ng-template>
+                                            </rx-column>
+                                        </rx-table>
+                                    </li>
+                                </ul>     
+                            </rx-template>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- My Progress -->
     <div class="col-12 col-lg-12 col-xl-10">
         <div class="section-box " style="background-color: #f1e9e933;">
             <div class="section-header">
