--- a/redsheet-portal/src/app/components/email-transaction/list/email-transaction-list.component.html
+++ b/redsheet-portal/src/app/components/email-transaction/list/email-transaction-list.component.html
@@ -1,26 +1,26 @@
 
-	<div class="container-fluid">
-    <div class="row justify-content-center">
-        <div class="col-12 col-lg-12 col-xl-10">
+<div class="container-fluid">
+<div class="row justify-content-center">
+    <div class="col-12 col-lg-12 col-xl-10">
       <h1 class="page-heading mt-3">Messaging</h1>
 
         <div class="container-fluid">         
             <div class="section-body">
-                <div class="row justify-content-between align-items-center">                        
-                        <div class="my-1 row col-sm-12 col-md-12 col-lg-4 justify-content-center align-items-center">                                
-                            <label class="my-1 mx-2 col-sm-12 col-md-2 col-lg-auto h2">Search</label>
+                <div class="row justify-content-center align-items-center">                        
+                        <div class="my-1 mx-0 px-0 row col-sm-12 col-md-12 col-lg-4 justify-content-around align-items-center">                                
+                            <label class="my-1  col-sm-12 col-md-2 col-lg-auto h2">Search</label>
                             <input type="text" class="my-1 form-control bg-white rounded col-sm-12 col-md-8 col-lg-7 text-dark h4" placeholder="Text here.." [(ngModel)]="searchValue" (keyup)="SearchEmailTransaction()">    
                         </div>
-                        <div class="my-1 row col-sm-12 col-md-12 col-lg-8 justify-content-center align-items-center">   
-                            <label class="my-1 mx-2 col-sm-12 col-md-2 col-lg-auto h2">Filter</label>
+                        <div class="my-1 mx-0 px-0 row col-sm-12 col-md-12 col-lg-8 justify-content-around align-items-center">   
+                            <label class="my-1 col-sm-12 col-md-2 col-lg-auto h2">Filter</label>
                             <div class="col-sm-12 col-md-8 col-lg-10 row px-0 justify-content-around">
                                 <div class="col-12 row justify-content-around d-flex flex-wrap float-right">
                                     <select class="my-1 mx-auto form-control form-control-lg rounded col-sm-3 col-md-3 col-lg-3 text-secondary h4" [(ngModel)]="emailCategoryValue" (change)="CategoryEmailTransaction()">
                                         <option value=""></option>
                                         <option class="h4" *ngFor="let filter of emailCategory" value="{{filter}}">{{filter}}</option>
                                     </select>
-                                    <button type="button" class="my-1 mx-auto p-0 btn-secondary bg-secondary rounded col-sm-4 col-md-4 col-lg-4 " (click)="DateOrderEmailTransaction()">
-                                        <p class="m-0 p-0 row d-flex justify-content-center align-items-center text-light h4">{{dateOrder}} <span class="ml-4 m-0 p-0 d-flex flex-column"><i class="m-0 p-0 fa fa-caret-up"></i><i class="m-0 p-0 fa fa-caret-down"></i></span></p>
+                                    <button type="button" class="my-1 mx-auto btn-secondary bg-secondary rounded col-sm-4 col-md-4 col-lg-4 " (click)="DateOrderEmailTransaction()">
+                                        <p class="m-0 p-0 d-flex justify-content-center align-items-center text-light h4">{{dateOrder}} <i class="px-2 fa fa-sort" aria-hidden="true"></i></p>
                                     </button>
                                     <button type="button" class="my-1 mx-auto btn-secondary bg-secondary rounded col-sm-4 col-md-4 col-lg-4 " (click)="ResetEmailTransactionFilter()">
                                         <p class="m-0 p-0 text-light h4">Reset Filter</p>
@@ -72,7 +72,7 @@
                     </rx-template>
 
             </div>
-            </div>
         </div>
-      </div>
-  </div>
+    </div>
+</div>
+</div>
