Uttam : WebApp : changes and message-users added

--- a/redsheet-portal/src/app/components/dashboard/dashboard.component.html
+++ b/redsheet-portal/src/app/components/dashboard/dashboard.component.html
@@ -176,6 +176,10 @@
                                                         <a (click)="showDropDown(dataItem)" title="Create Copy"
                                                             class="">Change Owner</a>
                                                     </li>
+                                                    <li *ngIf="dataItem.myRole == 'Owner'">
+                                                        <a (click)="SendMessage(users)" title="Message Users"
+                                                            class="">Message Users</a>
+                                                    </li>
                                                 </ul>
                                             </li>
                                         </ul>
