Uttam : WebApp : email-list-reply

--- a/redsheet-portal/src/app/components/email-transaction/list/email-transaction-list.component.html
+++ b/redsheet-portal/src/app/components/email-transaction/list/email-transaction-list.component.html
@@ -45,7 +45,7 @@
                                             <div class="sub-heading">
                                                 <div class="action-links d-flex flex-wrap "> <!--m-0 p-0 col-lg-6 col-xsm-12 justify-content-end -->
                                                     <span class="h5">
-                                                        <span><span class="text-muted">{{dataItem.UpdatedOn}}</span></span>
+                                                        <span><span class="text-muted">{{dataItem.UpdatedOn | date:"yyyy-MM-dd"}}</span></span>
                                                         <span class="ml-2 mr-2 text-muted">|</span>
                                                         <span *ngIf="dataItem.EmailStatus=='RECEIVED'"><span class="text-muted">RECEIVED</span><span class="ml-2"><img class="mb-2 m-0" src="../../../../assets/images/message-received.svg" width="20px" height="20px" alt="RECEIVED"></span></span>
                                                         <span *ngIf="dataItem.EmailStatus=='SENT'"><span class="text-muted">SENT</span><span class="ml-2"><img class="mb-2 m-0" src="../../../../assets/images/message-sent.svg" width="20px" height="20px" alt="SENT"></span></span>
