Uttam : WebApp : (ui and popup changes of email-transaction in html and component) , (changes in email-reply component,service) , (changes in idle-session) ,(add service and made changes for message totmultiple users) , WebApi : made changes in email reply and add post method for NewMessage , add new model emailtransactionnewmessage

--- a/redsheet-portal/src/app/components/dashboard/dashboard.component.html
+++ b/redsheet-portal/src/app/components/dashboard/dashboard.component.html
@@ -177,7 +177,7 @@
                                                             class="">Change Owner</a>
                                                     </li>
                                                     <li *ngIf="dataItem.myRole == 'Owner'">
-                                                        <a (click)="SendMessage(users)" title="Message Users"
+                                                        <a (click)="SendMessage(users,dataItem)" title="Message Users"
                                                             class="">Message Users</a>
                                                     </li>
                                                 </ul>
