--- a/redsheet-portal/src/app/components/dashboard/message-users/message-users/message-users.component.html
+++ b/redsheet-portal/src/app/components/dashboard/message-users/message-users/message-users.component.html
@@ -9,25 +9,25 @@
         </div>
         <div class="modal-body">
           <li class="my-1" *ngFor="let user of users; index as i" type="none">
-            <label class="custom-control custom-checkbox">
+            <label *ngIf="user.userId!=data.userId" class="custom-control custom-checkbox">
               <input class="custom-control-input checkbox-icon" type="checkbox" (change)="AddRemoveRecipents($event,user.email)">
               <span class="custom-control-indicator"></span>
               <span>{{user.userName}} - {{user.email}}</span>
           </label>
           </li>
           <p class="mt-3 mb-0 text-muted">Message</p>
-          <textarea  class="form-control" placeholder="Type message here.."></textarea> <!--[(ngModel)]="message"-->
+          <textarea  class="form-control" placeholder="Type message here.." [(ngModel)]="message"></textarea> <!--[(ngModel)]="message"-->
           <div class="m-0 py-3 p-0">
             <label class="custom-control custom-checkbox">
-              <input class="custom-control-input checkbox-icon" type="checkbox" name="isCheck"> <!--  -->
+              <input class="custom-control-input checkbox-icon" type="checkbox" name="isCheck" [(ngModel)]="isSent"> <!--  -->
               <span class="custom-control-indicator"></span>
               <span>Send email copy to recipient(s)</span>
           </label>
           </div>
         </div>
       <div class="modal-footer border-0 row justify-content-around align-items-center">
-          <button type="button" class="m-0 px-5 py-0 btn btn-info btn-md"><p class="mx-2 my-0 p-2 " data-dismiss="modal">Cancle</p></button> <!-- (click)="Cancle()" -->
-          <button class="m-0 px-5 py-0 btn btn-primary btn-md " ><p class="mx-2 my-0 p-2">Send Message</p></button> <!-- (click)="SendMessage()" [disabled]="message.length<=0" -->
+          <button type="button" class="m-0 px-5 py-0 btn btn-info btn-md" (click)="Cancle()"><p class="mx-2 my-0 p-2 ">Cancle</p></button> <!-- (click)="Cancle()" -->
+          <button class="m-0 px-5 py-0 btn btn-primary btn-md " [disabled]="MessageObject.EmailTo.length<=0 || message.length<=0" (click)="SendMessage()"><p class="mx-2 my-0 p-2">Send Message</p></button> <!-- (click)="SendMessage()" [disabled]="message.length<=0" -->
       </div>
     </div>
   </div>  
