--- a/redsheet-portal/src/app/components/idle-session-timer/idle-session-timer.component.html
+++ b/redsheet-portal/src/app/components/idle-session-timer/idle-session-timer.component.html
@@ -6,7 +6,8 @@
     <div class="modal-body">
           <div>
             <p>It's a gentle reminder your session about to expire</p>
-            <h3>remaining time {{remainingTime}}s</h3>
+            <h3 *ngIf="remainingTime>0">remaining time {{remainingTime}}s</h3>
+            <h3 *ngIf="remainingTime<=0">Signing Out</h3>
           </div>
     </div>
     <div class="modal-footer border-0">
