uttam : Webapp : popup for review confirmation

--- a/redsheet-portal/src/app/components/project-background/project-backgrounds/edit/project-background-edit.component.html
+++ b/redsheet-portal/src/app/components/project-background/project-backgrounds/edit/project-background-edit.component.html
@@ -163,6 +163,6 @@
     </div>
   </fieldset>
   <div>
-    <app-project-next-module [projectModuleId]="projectModuleId"></app-project-next-module>
+    <app-project-next-module (lockEvent)="contentDisable($event)" [projectModuleId]="projectModuleId"></app-project-next-module>
   </div>
 </div>
