--- a/redsheet-portal/src/app/components/project-power/project-powers/edit/project-power-edit.component.html
+++ b/redsheet-portal/src/app/components/project-power/project-powers/edit/project-power-edit.component.html
@@ -13,7 +13,7 @@
                     <div class="section-body">
                         <div class="row">
                             <div class="col-12 col-xl-4">
-                                <h2 class="color-primary sub-heading-font">{{powerType.powerTypeName}}</h2>
+                                <h2 class="color-primary sub-heading-font">{{"powerType.powerTypeName"}}</h2>
                                 <div class="power-action">
                                     <h4>Actual *</h4>
                                     <div class="btn-group justify-btn justify-content-between">
