--- a/redsheet-portal/src/app/components/project-module/project-modules/project-next-module/project-next-module.component.html
+++ b/redsheet-portal/src/app/components/project-module/project-modules/project-next-module/project-next-module.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="showNextBtnComponent" class="row justify-content-center">
     <div class="col-12 col-lg-12 col-xl-10 next-button pr-3">
         <button *ngIf="nextProjectModule.projectModuleId > 0" class="btn btn-primary btn-sm" title="Lock"
-                    (click)="redirectlink(nextProjectModule)"> NEXT: {{nextProjectModule.templateModuleName}} > </button>
+                    (click)="redirectlink(nextProjectModule,currentProjectmoduleRecord)"> NEXT: {{nextProjectModule.templateModuleName}} > </button>
 
         <button *ngIf="nextProjectModule.projectModuleId == 0" class="btn btn-primary btn-sm" title="Lock"
-                    (click)="redirectlink(nextProjectModule)"> Back to My Projects > </button>
+                    (click)="redirectlink(nextProjectModule,currentProjectmoduleRecord)"> Back to My Projects > </button>
     </div>
 </div>
